--- a/src/app/components/author-books/author-books.component.html
+++ b/src/app/components/author-books/author-books.component.html
@@ -3,7 +3,7 @@
     <h1 class="fulName">{{author.auFname}} {{author.auLname}}</h1>
     <h2 class="info">Address: {{author.state}}, {{author.city}}, {{author.address}}</h2>
     <h2 class="info">Phone: {{author.phone}}</h2>
-    <a routerLink="/authors/cart">Cart</a>
+    <button class="btn"><a routerLink="/authors/cart">Cart</a></button>
     <button class="btn" (click)="sort('title1')">Sort By Name</button>
     <button class="btn" (click)="sort('pubdate')">Sort By Date</button>
     <div class="container">
