--- a/src/app/components/author-item/author-item.component.html
+++ b/src/app/components/author-item/author-item.component.html
@@ -1,6 +1,7 @@
 <div class="author">
-    <a routerLink="/authors/{{author.auId}}"> aaa</a>
+
     <h3>{{author.auFname}} {{author.auLname}}</h3>
     <h3>the numbers of books i'have writing : {{author.numOfBooks}} </h3>
-
+    <button class="btn"><a routerLink="/authors/{{author.auId}}">See {{author.auFname}} {{author.auLname}}'s
+            books</a></button>
 </div>
